# django-multi-import

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  runtests.py  setup.py  tox.ini
.github/workflows/: validate.yml
multi_import/: __init__.py  _txt.py  cache.py  cached_query.py  data.py  exceptions.py  exporter.py  fields.py  formats.py  import_behaviours.py  import_diff_applier.py  import_diff_generator.py  import_export_manager.py  import_result.py  importer.py  mappings.py  multi_file_importer.py  multi_importer.py  object_cache.py  object_resolver.py  relations.py  serializers.py  utils.py  value_resolver.py
multi_import/helpers/: exceptions.py  fields.py  files.py  serializers.py  strings.py  transactions.py
test/: models.py  tests.py
tests/: models.py  settings.py  test_cache.py  test_csv_format.py  test_file_detection.py  test_file_reading.py  test_helpers_files.py  test_helpers_serializers.py  test_helpers_strings.py  test_json_format.py  test_mappings.py  test_object_cache.py  test_serializers.py  test_value_resolver.py  test_xlsx_format.py  test_yaml_format.py  tests.py
tests/fixtures/: test_file.xlsx
tests/test_import_files/: test_file.csv  test_file.json  test_file.yaml
